# difftest_ng

./: Makefile  Makefile.template  Makefile_Settings.gcc  README  autoconfig.h  autoconfig.h.in  automakefile  automakefile.in  config.h  configure  configure.in
cmd/: Makefile  main.cpp  main.hpp  stripe.cpp
diff/: Makefile  add.cpp  add.hpp  bayercolor.cpp  bayercolor.hpp  bayerconv.cpp  bayerconv.hpp  butterfly.cpp  butterfly.hpp  clamp.cpp  clamp.hpp  colorhist.cpp  colorhist.hpp  compare.cpp  compare.hpp  convertimg.cpp  convertimg.hpp  crop.cpp  crop.hpp  debayer.cpp  debayer.hpp  diffimg.cpp  diffimg.hpp  dimension.cpp  dimension.hpp  downsampler.cpp  downsampler.hpp  extractfield.cpp  extractfield.hpp  fftfilt.cpp  fftfilt.hpp  fftimg.cpp  fftimg.hpp  fill.cpp  fill.hpp  flip.cpp  flip.hpp  flipextend.cpp  flipextend.hpp  fromgrey.cpp  (+51 more)
img/: Makefile  blankimg.cpp  blankimg.hpp  imglayout.cpp  imglayout.hpp  imgspecs.cpp  imgspecs.hpp  simplebmp.cpp  simplebmp.hpp  simpledpx.cpp  simpledpx.hpp  simpleexr.cpp  simpleexr.hpp  simplepgx.cpp  simplepgx.hpp  simplepng.cpp  simplepng.hpp  simpleppm.cpp  simpleppm.hpp  simpleraw.cpp  simpleraw.hpp  simplergbe.cpp  simplergbe.hpp  simpletiff.cpp  simpletiff.hpp
interface/: Makefile  types.cpp  types.hpp
std/: Makefile  assert.cpp  assert.hpp  ctype.cpp  ctype.hpp  errno.cpp  errno.hpp  math.hpp  setjmp.hpp  stdarg.cpp  stdarg.hpp  stddef.hpp  stdio.cpp  stdio.hpp  stdlib.cpp  stdlib.hpp  string.hpp  unistd.cpp  unistd.hpp
tiff/: Makefile  decoderbase.cpp  decoderbase.hpp  decoderfunctions.cpp  decoderfunctions.hpp  lzwdecoder.cpp  lzwdecoder.hpp  packbitsdecoder.cpp  packbitsdecoder.hpp  tiffparser.cpp  tiffparser.hpp  tifftags.cpp  tifftags.hpp  tiffwriter.cpp  tiffwriter.hpp  trivialdecoder.cpp  trivialdecoder.hpp
tools/: Makefile  fft.cpp  fft.hpp  file.cpp  file.hpp  halffloat.cpp  halffloat.hpp
vs10.0/difftest_ng/difftest_ng/: difftest_ng.vcxproj
vs14.0/difftest_ng/: difftest_ng.sln
vs15.0/difftest_ng/: difftest_ng.sln
vs15.0/difftest_ng/difftest_ng/: difftest_ng.vcxproj
